# crateton

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: gh-pages.yml
assets/models/Duck/: config.json  mesh_decomposition.json  mesh_decomposition.rmp
assets/models/FlightHelmet/: config.json  mesh_decomposition.json  mesh_decomposition.rmp
assets/models/monkey/: mesh_decomposition.json  mesh_decomposition.rmp
assets/models/website-terrain/: WebsiteTerrain.gltf  mesh_decomposition.json
assets/shaders/: silhouette.frag  silhouette.vert
crates/crateton_core/: Cargo.toml
crates/crateton_core/src/: assets.rs  controls.rs  lib.rs  physics.rs
crates/crateton_generate_thumbnail/: Cargo.toml
crates/crateton_generate_thumbnail/src/: main.rs  texture.rs
crates/crateton_scripts/: Cargo.toml
crates/crateton_scripts/src/: lib.rs  lib.rs.pyo3  pymod.rs
scripts/: test.rs
src/: assets.rs  controls.rs  hacd.rs  json.rs  lib.rs  main.rs  map.rs  math.rs  physics.rs  prelude.rs  serde.rs  shaders.rs  tools.rs  ui.rs  utils.rs  wasm.rs
src/models/: decomposition.rs  mesh_wrapper.rs  mod.rs  thumbnail.rs
src/player/: controller.rs  events.rs  input_map.rs  look.rs  mod.rs  physics.rs  raycast.rs  spawn.rs
src/scripts/: mod.rs  pymod.rs
src/ui/: debugger.rs  editor.rs  mod.rs  spawnmenu.rs  terminal.rs
wasm/: index.html
