[package]
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"
name = "crateton"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rg3d = "0.22"


###### Performance knobs

[profile.release]
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = true
debug-assertions = true
opt-level = 2