[package]
name = "crateton_generate_thumbnail"
version = "0.1.0"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = {git = "https://github.com/bevyengine/bevy"}
bevy = "0.5"
image = "0.23.12"