[package]
name = "crateton_scripts"
version = "0.1.0"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4.0", default-features = false }
# pyo3 = {version = "0.13.1", features=["auto-initialize"]}
take_mut = "0.2.2" 
# crateton_core = { path = "../crateton_core" }
rustpython-vm = { git = "https://github.com/RustPython/RustPython" }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython" }
rustpython-derive = { git = "https://github.com/RustPython/RustPython" }
rustpython-common = { git = "https://github.com/RustPython/RustPython" }