[package]
name = "crateton_scripts"
version = "0.1.0"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustpython-vm/compile-parse"]
web = ["rustpython-vm/freeze-stdlib", "rustpython-vm/compile-parse"]

[dependencies]
bevy = { version = "0.4.0", default-features = false }
take_mut = "0.2.2" 
rustpython-vm = { git = "https://github.com/RustPython/RustPython", default-features = false }
rustpython-derive = { git = "https://github.com/RustPython/RustPython" }
rustpython-common = { git = "https://github.com/RustPython/RustPython" }
#rustpython-bytecode = { git = "https://github.com/RustPython/RustPython" }